changed some css to inline and fixed overflow problem

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -11,9 +11,10 @@ h1, h3 {
 .container {
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
-    grid-template-rows: 30px 85vh;
+    grid-template-rows: 2.2em 85vh;
     grid-column-gap: 1em;
     grid-row-gap: 1em;
+    /*grid-auto-rows: auto;*/
 }
 
 .ide-options {
@@ -32,14 +33,12 @@ h1, h3 {
     padding: 5px;
     font-family: monospace;
     font-size: 1.5em;
-}
-
-#output-text {
-    color: #15ef70;
+    min-width: 85vh;
+    overflow: scroll;
 }
 
 #output-title {
-    color: white;
+    color:#15ef70;
     text-align: center;
     font-size: 1.3em;
 }
@@ -55,10 +54,6 @@ h1, h3 {
 #editor {
     margin-top: 10px;
     width: 100%;
-}
-
-#loading {
-    color: rgb(167, 167, 167);
 }
 
 #language, #theme {
@@ -79,7 +74,6 @@ h1, h3 {
 #submit {
     margin-left: auto;
     margin-right: 0;
-    /* background-color: #c2fbd7; */
     background-color: #167a4f;
     border-radius: 100px;
     box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
